infrastructure/ticketing/manifests/faveo-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: faveo
    app.kubernetes.io/part-of: faveo
  name: faveo
  namespace: crownlabs-ticketing
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app.kubernetes.io/name: faveo
    app.kubernetes.io/part-of: faveo
  type: ClusterIP
