infrastructure/ticketing/manifests/faveo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  name: faveo-ingress
  namespace: crownlabs-ticketing
spec:
  ingressClassName: nginx-external
  rules:
  - host: support.crownlabs.polito.it
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: faveo
            port:
              number: 80
  tls:
  - hosts:
    - support.crownlabs.polito.it
    secretName: crownlabs-ingress-secret
